<resources>
    <string name="_0123456789654554">0123456789654554</string>
    <string name="_016xxxxxxxx">016xxxxxxxx</string>
    <string name="_0175xxxxxxx">0175xxxxxxx</string>
    <string name="_123456">123456</string>
    <string name="_50">50</string>
    <string name="_5000">5000</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_binimoy">About Binimoy</string>
    <string name="acc_link_account_type">Account Type</string>
    <string name="acc_link_option_abs">Agent Banking Card</string>
    <string name="acc_link_option_cbs">Nexus Debit Card</string>
    <string name="accepted_in">Accepted in</string>
    <string name="accepted_time">Accepted time :</string>
    <string name="account_number">ACCOUNT NUMBER</string>
    <string name="account_number_user">Account Number*</string>
    <string name="account_required">Account Number is required!</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_execute">Execute</string>
    <string name="action_exit">Exit</string>
    <string name="action_link_go_to_step2">Got OTP? <u>Go to Verification Step.</u></string>
    <string name="action_link_resend_otp"><u>Resend OTP.</u></string>
    <string name="action_log_in">Log in</string>
    <string name="action_next">Next</string>
    <string name="action_no">No</string>
    <string name="action_own_number"><u>(Own Number)</u></string>
    <string name="action_retry">Retry</string>
    <string name="action_save">Save</string>
    <string name="action_select_biller">Select Biller</string>
    <string name="action_send_money">Send Money</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_up">Register</string>
    <string name="action_submit">Submit</string>
    <string name="action_validate">Validate</string>
    <string name="action_verify">Verify</string>
    <string name="action_yes">Yes</string>
    <string name="activity_titile_take_image">Take Image</string>
    <string name="add_account">Add Account</string>
    <string name="add_account_successful">Add Account Successful</string>
    <string name="add_beneficiary_">Add Beneficiary</string>
    <string name="add_beneficiary_hint">Click + to Add Beneficiary</string>
    <string name="add_more_account">Add New Account?</string>
    <string name="add_user">Add Personal Account</string>
    <string name="address">ADDRESS</string>
    <string name="address_label">Address</string>
    <string name="alias">Alias</string>
    <string name="all">All</string>
    <string name="all_files">All Files</string>
    <string name="all_images">All Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_videos">All Videos</string>
    <string name="amount">AMOUNT</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Rocket</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="attachments_num">%d</string>
    <string name="attachments_title_text" formatted="false">(%d/%d)</string>
    <string name="back"><u>Back</u></string>
    <string name="balance">Balance</string>
    <string name="bd_qr_label_invoice">Invoice</string>
    <string name="bd_qr_label_location">Location</string>
    <string name="bd_qr_label_merchant_name">Merchant Name</string>
    <string name="bd_qr_label_store_id">Store ID</string>
    <string name="bd_qr_label_terminal_id">Terminal ID</string>
    <string name="bd_qr_pay_to">Pay to</string>
    <string name="beneficiary_">Beneficiary Management</string>
    <string name="beneficiary_vid">Beneficiary Vid</string>
    <string name="bill_information">Bill Information</string>
    <string name="biller_category_default">Category (All)</string>
    <string name="biller_id_label">Biller Id</string>
    <string name="binimoy_error_empty_address">Please input address</string>
    <string name="binimoy_error_empty_alias">Please input Alias</string>
    <string name="binimoy_error_empty_email">Please input email</string>
    <string name="binimoy_error_empty_name">Please input name</string>
    <string name="binimoy_error_empty_rocket_no">Rocket No. not found</string>
    <string name="binimoy_error_empty_tin">Please input TIN</string>
    <string name="binimoy_error_empty_vid">Please input VID</string>
    <string name="binimoy_error_valid_email">Please input valid email</string>
    <string name="binimoy_label_alias">Alias</string>
    <string name="binimoy_label_email">Email</string>
    <string name="binimoy_label_name">Name</string>
    <string name="binimoy_label_rocket_no">Mobile No.</string>
    <string name="binimoy_label_tin">TIN</string>
    <string name="binimoy_label_vid">VID</string>
    <string name="binimoy_label_vied_tag">\@ binimoy</string>
    <string name="binimoy_option">Select your preferred option.</string>
    <string name="binimoy_registration">Registration</string>
    <string name="binimoy_title_account_open">Register to Binimoy</string>
    <string name="binimoy_title_verify_rocket_no">Verify Rocket No</string>
    <string name="binimoy_transfer">Transfer</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_accept">Accept</string>
    <string name="cash_contact_no">Contact No.</string>
    <string name="cash_partially_accepted">Partially Accepted</string>
    <string name="cash_pick_up_address">Pick-up Address</string>
    <string name="cash_remaining_amount">Remaining amount</string>
    <string name="cash_request_type">Request Type</string>
    <string name="cash_requested_amount">Requested Amount</string>
    <string name="cash_title_cash_mgmt">My request details</string>
    <string name="cash_total_accepted_amount">Total accepted Amount</string>
    <string name="change_language">Change Language</string>
    <string name="change_pin">Change PIN</string>
    <string name="char_address">Character</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.google.firebase.crashlytics.mapping_file_id">952f9a7b87174e9f81b254dc5fa6f31f</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="ek_label_dateofbirth_hint">DD-Mon-YYYY</string>
    <string name="ek_label_dateofbirth_with_format">Date Of Birth(DD-Mon-YYYY)</string>
    <string name="ek_label_district">District</string>
    <string name="ek_label_father_name">"Father's Name"</string>
    <string name="ek_label_husband_name">"Husband's Name"</string>
    <string name="ek_label_mboffice">Area</string>
    <string name="ek_label_mother_name">"Mother's Name"</string>
    <string name="ek_label_name_bangla">Name In Bangla</string>
    <string name="ek_label_name_english">Name In English</string>
    <string name="ek_label_national_id_no">NID No.</string>
    <string name="ek_label_nid_address">Address</string>
    <string name="ek_nid_address_min_length">0/20</string>
    <string name="get_contact">Get Contact</string>
    <string name="hint_mobile_ac_no">Mobile or A/C No</string>
    <string name="label_account">Account No.</string>
    <string name="label_amount">Amount</string>
    <string name="label_country_of_birth">Country of Birth</string>
    <string name="label_expected_amount">Expected Amount</string>
    <string name="label_is_default_credit_account">Is default credit account?</string>
    <string name="label_is_default_debit_account">Is default debit account?</string>
    <string name="label_is_default_rtp_account">Is default RTP account?</string>
    <string name="label_mtcn_no">MTCN No</string>
    <string name="label_password">PIN</string>
    <string name="label_recipient_ac">Recipient Mobile or A/C No</string>
    <string name="label_recipient_name">Recipient Name</string>
    <string name="label_ref_sendMoney">Reference</string>
    <string name="menu_change_language">Language</string>
    <string name="menu_qr_generate">My QR</string>
    <string name="menu_txn_summery">Transaction Report</string>
    <string name="name">name</string>
    <string name="nav_drawer_about_us">About Us</string>
    <string name="nav_drawer_charges">Service Charges</string>
    <string name="nav_drawer_contact_us">Contact Us</string>
    <string name="nav_drawer_limits">Transaction Limits</string>
    <string name="nav_drawer_logout">Logout</string>
    <string name="nav_others">Others</string>
    <string name="nav_referral">Share Referral</string>
    <string name="nav_settings">Settings</string>
    <string name="placeholder_ref_sendMoney">Note / Purpose</string>
    <string name="prompt_account">Rocket Account</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_mtcn_no">MTCN No</string>
    <string name="prompt_password">PIN</string>
    <string name="quick_balance">Quick Balance</string>
    <string name="text_limit">0/30</string>
    <string name="title_activity_balance_inquiry">Balance Inquiry</string>
    <string name="title_activity_mini_statement">Mini Statement</string>
    <string name="title_activity_remittance">Remittance</string>
    <string name="title_set_my_location">Set My Location</string>
</resources>