<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <group>
        <item android:icon="@android:drawable/ic_menu_add" android:id="@id/nav_drawer_add_user" android:title="@string/add_user" />
        <item android:icon="@drawable/vg_ic_menu_remittance" android:id="@id/nev_remittance" android:title="@string/title_activity_remittance" android:iconTint="@color/black" />
        <item android:icon="@drawable/vg_ic_default_balance_inquiry" android:id="@id/nev_balance_inquiry" android:title="@string/title_activity_balance_inquiry" android:iconTint="@color/black" />
        <item android:icon="@drawable/vg_ic_menu_statement" android:id="@id/nev_mini_statement" android:title="@string/title_activity_mini_statement" android:iconTint="@color/black" />
        <item android:icon="@drawable/vg_ic_menu_statement" android:id="@id/nev_agent_txn_summery" android:title="@string/menu_txn_summery" android:iconTint="@color/black" />
        <item android:icon="@drawable/vg_ic_menu_statement" android:id="@id/nev_agent_mini_statement" android:title="@string/title_activity_mini_statement" android:iconTint="@color/black" />
        <item android:icon="@drawable/vg_ic_menu_qr_generate" android:id="@id/nev_qr_generate" android:title="@string/menu_qr_generate" android:iconTint="@color/black" />
        <item android:icon="@drawable/ic_service_charges" android:id="@id/nav_drawer_charges" android:title="@string/nav_drawer_charges" />
        <item android:icon="@drawable/ic_transaction_limits" android:id="@id/nav_drawer_limits" android:title="@string/nav_drawer_limits" />
    </group>
    <item android:title="@string/nav_settings">
        <menu>
            <item android:icon="@drawable/ic_change_language" android:id="@id/nav_drawer_language" android:title="@string/menu_change_language" />
            <item android:icon="@drawable/vg_ic_menu_balance_inquiry" android:id="@id/nav_drawer_show_balance" android:title="@string/quick_balance" app:actionLayout="@layout/nav_drawer_show_balance" />
            <item android:icon="@drawable/ic_my_location" android:id="@id/nav_drawer_set_my_location" android:title="@string/title_set_my_location" />
            <item android:icon="@drawable/ic_referral" android:id="@id/nav_referral" android:visible="false" android:title="@string/nav_referral" />
        </menu>
    </item>
    <item android:title="@string/nav_others">
        <menu>
            <item android:icon="@drawable/ic_nav_drawer_info" android:id="@id/nav_drawer_about_us" android:title="@string/nav_drawer_about_us" />
            <item android:icon="@drawable/ic_phone" android:id="@id/nav_drawer_contact_us" android:title="@string/nav_drawer_contact_us" />
            <item android:icon="@drawable/ic_logout" android:id="@id/nav_drawer_logout" android:title="@string/nav_drawer_logout" android:iconTint="@color/light_gray" />
        </menu>
    </item>
</menu>