<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:padding="@dimen/default_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.DefaultPanel">
            <TextView android:layout_marginTop="8.0dip" android:text="@string/label_account" style="@style/RocketTheme.InputLabel" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/input_margin_bottom">
                <EditText android:id="@id/et_account" android:hint="@string/prompt_account" android:maxLines="1" android:maxLength="12" android:inputType="number" app:drawableLeftCompat="@drawable/ic_default_account" app:drawableStartCompat="@drawable/ic_default_account" style="@style/RocketTheme.EditText" />
                <ImageButton android:id="@id/ib_get_contact" android:background="@drawable/ic_phone_book" android:layout_width="48.0dip" android:layout_height="48.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/container_name" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:text="@string/label_recipient_name" style="@style/RocketTheme.InputLabel" />
                <TextView android:id="@id/tv_account_name" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.EditText.Disabled" />
            </LinearLayout>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_amount" style="@style/RocketTheme.InputLabel" />
            <EditText android:id="@id/et_amount" android:hint="@string/prompt_amount" android:digits="\ 1234567890" android:inputType="number" app:drawableLeftCompat="@drawable/ic_amount" style="@style/RocketTheme.EditText" />
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_password" style="@style/RocketTheme.InputLabel" />
            <EditText android:id="@id/et_password" android:hint="@string/prompt_password" android:maxLines="1" android:maxLength="4" android:digits="\ 1234567890" android:inputType="numberPassword" app:drawableLeftCompat="@drawable/ic_key" style="@style/RocketTheme.EditText" />
            <Button android:id="@id/btn_submit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/action_send_money" style="@style/RocketTheme.Button" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>