<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/main_content" android:background="@drawable/bg_main_app" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" style="@style/RocketTheme.NoActionBarTheme.AppBar">
        <include layout="@layout/toolbar_internal" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="@dimen/default_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.DefaultPanel">
                <LinearLayout android:orientation="horizontal" android:id="@id/acc" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:layout_marginTop="8.0dip" android:text="@string/label_recipient_ac" style="@style/RocketTheme.InputLabel" />
                </LinearLayout>
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/input_margin_bottom">
                    <EditText android:id="@id/et_account" android:hint="@string/hint_mobile_ac_no" android:maxLines="1" android:maxLength="12" android:inputType="number" android:autofillHints="@string/name" app:drawableStartCompat="@drawable/ic_default_account" style="@style/RocketTheme.EditText" />
                    <ImageButton android:id="@id/ib_get_contact" android:background="@drawable/ic_phone_book" android:layout_width="48.0dip" android:layout_height="48.0dip" android:contentDescription="@string/get_contact" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/container_name" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/label_recipient_name" style="@style/RocketTheme.InputLabel" />
                    <TextView android:id="@id/tv_account_name" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.EditText.Disabled" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/container_ref" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:text="@string/label_ref_sendMoney" style="@style/RocketTheme.InputLabel" />
                        <TextView android:textColor="@color/light_gray" android:gravity="end" android:id="@id/tv_limit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/text_limit" android:fontFamily="@font/regular" />
                    </LinearLayout>
                    <EditText android:id="@id/et_sendMoney_ref" android:hint="@string/placeholder_ref_sendMoney" android:maxLength="30" android:inputType="text" android:autofillHints="@string/placeholder_ref_sendMoney" style="@style/RocketTheme.EditText" />
                </LinearLayout>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_amount" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_amount" android:hint="@string/prompt_amount" android:digits="\ 1234567890" android:inputType="number" android:autofillHints="@string/label_amount" app:drawableLeftCompat="@drawable/ic_amount" style="@style/RocketTheme.EditText" />
                <Button android:id="@id/btn_submit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/action_submit" style="@style/RocketTheme.Button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottom_bar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>