<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/main_content" android:background="@drawable/bg_main_app" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" style="@style/RocketTheme.NoActionBarTheme.AppBar">
        <include layout="@layout/toolbar_internal" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="@dimen/default_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.DefaultPanel">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_name" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_name" android:hint="@string/binimoy_label_name" android:inputType="text" android:autofillHints="Name" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/prompt_account" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_rocket_no" android:hint="@string/binimoy_label_rocket_no" android:inputType="text" android:autofillHints="rocketNo" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_alias" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_alias" android:hint="@string/binimoy_label_alias" android:inputType="text" android:autofillHints="Name" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_vid" style="@style/RocketTheme.InputLabel" />
                <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/input_margin_bottom">
                    <EditText android:id="@id/et_vid" android:hint="@string/binimoy_label_vid" android:maxLines="1" android:maxLength="12" android:inputType="text" style="@style/RocketTheme.EditText" />
                    <Button android:textColor="@color/bg_default_action" android:id="@id/btn_test" android:background="@color/divider" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_vied_tag" android:textAllCaps="false" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_email" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_email" android:hint="@string/binimoy_label_email" android:inputType="textEmailAddress" android:autofillHints="Mobile" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/binimoy_label_tin" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_tin" android:hint="@string/binimoy_label_tin" android:inputType="number" android:autofillHints="TIN" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_nid_address" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_address" android:hint="@string/ek_label_nid_address" android:inputType="textMultiLine" style="@style/RocketTheme.EditTextMultiline" />
                <CheckBox android:textColor="@color/black" android:id="@id/is_default_credit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_is_default_credit_account" style="@style/RocketTheme.Text.Small" />
                <CheckBox android:textColor="@color/black" android:id="@id/is_default_rtp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_is_default_rtp_account" style="@style/RocketTheme.Text.Small" />
                <CheckBox android:textColor="@color/black" android:id="@id/is_default_debit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/label_is_default_debit_account" style="@style/RocketTheme.Text.Small" />
                <Button android:id="@id/btn_validate" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/default_padding" android:text="@string/action_confirm" app:drawableLeftCompat="@drawable/ic_null" app:drawableRightCompat="@drawable/ic_arrow_forward_white" style="@style/RocketTheme.Button" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/bottom_bar" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>