<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_mtcn_no" style="@style/RocketTheme.InputLabel" />
    <EditText android:id="@id/et_mtcn_no" android:hint="@string/prompt_mtcn_no" android:digits="\ 1234567890" android:inputType="text" app:drawableLeftCompat="@drawable/ic_default_ref_no" style="@style/RocketTheme.EditText" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/label_expected_amount" style="@style/RocketTheme.InputLabel" />
    <EditText android:id="@id/et_amount" android:hint="@string/prompt_amount" android:digits="\ 1234567890" android:inputType="number" app:drawableLeftCompat="@drawable/ic_amount" style="@style/RocketTheme.EditText" />
    <LinearLayout android:orientation="vertical" android:id="@id/operator_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:text="@string/label_country_of_birth" style="@style/RocketTheme.InputLabel" />
        <Spinner android:id="@id/sp_country" style="@style/RocketTheme.EditText" />
    </LinearLayout>
</LinearLayout>