<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@id/main_content" android:background="@drawable/bg_main_app" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.appbar.AppBarLayout android:id="@id/appbar" style="@style/RocketTheme.NoActionBarTheme.AppBar">
        <include layout="@layout/toolbar_internal" />
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:padding="@dimen/default_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/RocketTheme.DefaultPanel">
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_national_id_no" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_nidNo" android:hint="@string/ek_label_national_id_no" android:inputType="text" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_name_english" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_englishName" android:hint="@string/ek_label_name_english" android:inputType="text" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_name_bangla" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_banglaName" android:hint="@string/ek_label_name_bangla" android:inputType="text" style="@style/RocketTheme.EditText" />
                <TextView android:id="@id/tv_fatherorHusbandTag" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_father_name" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_fatherName" android:hint="@string/ek_label_father_name" android:inputType="text" style="@style/RocketTheme.EditText" />
                <EditText android:id="@id/et_husbandName" android:hint="@string/ek_label_husband_name" android:inputType="text" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_mother_name" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_motherName" android:hint="@string/ek_label_mother_name" android:inputType="text" style="@style/RocketTheme.EditText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/ek_label_dateofbirth_with_format" style="@style/RocketTheme.InputLabel" />
                <EditText android:id="@id/et_dateofBirth" android:hint="@string/ek_label_dateofbirth_hint" android:inputType="text" style="@style/RocketTheme.EditText" />
                <LinearLayout android:orientation="vertical" android:id="@id/district_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/ek_label_district" style="@style/RocketTheme.InputLabel" />
                    <Spinner android:id="@id/sp_district" style="@style/RocketTheme.EditText" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/territory_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:text="@string/ek_label_mboffice" style="@style/RocketTheme.InputLabel" />
                    <Spinner android:id="@id/sp_territory" style="@style/RocketTheme.EditText" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/nidAddress_container" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <TextView android:text="@string/ek_label_nid_address" style="@style/RocketTheme.InputLabel" />
                        <TextView android:textColor="@color/light_gray" android:gravity="end" android:id="@id/tv_nid_address_limit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ek_nid_address_min_length" android:fontFamily="@font/regular" />
                    </LinearLayout>
                    <EditText android:id="@id/et_banglaAddress" android:hint="@string/ek_label_nid_address" android:inputType="textMultiLine" style="@style/RocketTheme.EditTextMultiline" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btn_next" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/action_next" app:drawableLeftCompat="@drawable/ic_null" app:drawableRightCompat="@drawable/ic_arrow_forward_white" style="@style/RocketTheme.Button" />
        <include layout="@layout/bottom_bar" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>